k8s/gibbon-mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gibbon-db
  namespace: demo-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gibbon-db
  template:
    metadata:
      labels:
        app: gibbon-db
    spec:
      containers:
        - name: mariadb
          image: mariadb:10.6
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mariadb-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mariadb-storage
          persistentVolumeClaim:
            claimName: gibbon-mariadb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: gibbon-db
  namespace: demo-app-deployment
spec:
  selector:
    app: gibbon-db
  ports:
    - port: 3306
