k8s/gibbon-mysql-deployment.yaml
# gibbon-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gibbon-mysql
  namespace: demo-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gibbon-mysql
  template:
    metadata:
      labels:
        app: gibbon-mysql
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
            - name: initdb
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: gibbon-mysql-pvc
        - name: initdb
          configMap:
            name: gibbon-db-init
      terminationGracePeriodSeconds: 30
      readinessProbe:
        exec:
          command: ["mysqladmin", "ping", "-h", "127.0.0.1"]
        initialDelaySeconds: 20
        periodSeconds: 10
---
# ---------- 
# mysql service
# --------
apiVersion: v1
kind: Service
metadata:
  name: gibbon-mysql
  namespace: demo-app-deployment
spec:
  selector:
    app: gibbon-mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
