k8s/gibbon-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gibbon-mysql
  namespace: demo-app-deployment
spec:
  selector:
    app: gibbon-mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
