k8s/gibbon-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gibbon-service
  namespace: demo-app-deployment
spec:
  selector:
    app: gibbon
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
