k8s/gibbon-ingress.yaml
#gibbon-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gibbon-ingress
  namespace: demo-app-deployment
  annotations:
#    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/cluster-issuer: letsencrypt-staging ##temporay use this for testing
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"  # fix mismatch
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-body-size: "64m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
spec:
  ingressClassName: nginx
  rules:
    - host: banthach-demo.vanhoa.edu.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gibbon-service
                port:
                  number: 80
  tls:
    - hosts:
        - banthach-demo.vanhoa.edu.vn
      secretName: gibbon-demo-tls
